# obsidian_to_trilium

./: .css  .css.backup  .env.example  .env.test.example  .gitignore  README.md  directory_scanner.py  main.py  md_converter.py  md_to_trilium.py  pyproject.toml  run.sh  trilium_uploader.py  upload_css.py  upload_css.sh
test_docs/: README.md  all_callout_types.md  basic_test.md  callouts_test.md  combined_features.md  hierarchical_labels_test.md  labels_test.md  test_example.md  test_example2.md  wiki_links_test.md
test_docs/subfolder/: another_nested.md  nested_note.md
